2007-08-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-05
	* parser improvements:
	* missing parameters in HLTrigger are back
	* out-of-sequence errors w. the CSC*Producers and
	DTSegment*Producers gone
	* pick up latest converter changes
	
2007-08-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-04
	* bug fix: boolean parameter values would always come back 'false'
	from the database
	* pick up latest parser fix
	
2007-08-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-03
	* migrate streams
	* make Configuration.insert* more robust against invalid template
	names

2007-08-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-02
	* fix sql queries for 'fast' loading of templates (restricted to
	the ones referenced in the configuration to be converted).
	* confdb.converter.Converter fixed, takes two parameters now:
	configId *and* the index of the database setup in the ConfDBSetups
	class (1=HLT Dev, 2=OMDS)
	* pick up latest parser fixes
	* pick up latest browser fixes
	
2007-08-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-01
	* pick up latest converter / browser developments from Ulf
	* gui bugfixes
	* add ability to sort components, disabled for now and *not* yet
	reflected in the db schema!
	* fixed typo in confdb.properties: it is OMDS, not ODMS:)

2007-08-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-00
	* data: add stream support
	* db/sql: add releaseId, creator to table
	'Configurations'; remove table 'ConfigurationReleaseAssoc'; add
	tables 'Streams' and 'StreamPathAssoc; Oracle specific performance
	improvements (regarding indices / primary keys).
	* gui: The configuration panel contains a new tab, 'Streams',
	which brings up a tree view of the defined streams and the
	assigned paths and allows to manipulate them
	* the int2r hlt development schema was updated and is now only